--- a/app/src/main/res/layout/list_item_vertical.xml
+++ b/app/src/main/res/layout/list_item_vertical.xml
@@ -28,7 +28,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
-            android:text="치즈 리스트"
+            android:text="Animal List"
             android:textColor="#2D2D2D"
             android:textSize="20sp"
             android:textStyle="normal" />
